--- a/coupon-gateway/src/main/resources/application.yml
+++ b/coupon-gateway/src/main/resources/application.yml
@@ -10,3 +10,20 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8000/eureka/
+
+
+zuul:
+  prefix: /imooc
+  routes:
+    #优惠券模板微服务器由配置定义
+  template:
+    path: /coupon-template/**
+    serviceId: eureka-client-coupon-template
+    strip-prefix: false
+  host:
+    connect-timeout-millis: 15000
+    socket-timeout-millis: 60000
+
+ribbon:
+  ConnectTimeout: 15000
+  ReadTimeout: 15000
