--- a/imooc-coupon-service/coupon-template/src/main/resources/application.yml
+++ b/imooc-coupon-service/coupon-template/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     open-in-view: false
   datasource:
     # 数据源
-    url: jdbc:mysql://127.0.0.1:3306/imooc_coupon_data?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/imooc_coupon_data?serverTimezone=UTC&autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: 684817
     type: com.zaxxer.hikari.HikariDataSource
@@ -36,7 +36,7 @@ spring:
     port: 6379
     # password:
     # 连接超时时间
-    timeout: 10000
+    #timeout: 10000
 
 eureka:
   client:
