--- a/coupon-gateway/src/main/resources/application.yml
+++ b/coupon-gateway/src/main/resources/application.yml
@@ -20,6 +20,11 @@ zuul:
       path: /coupon-template/**    #网关访问的地址前缀
       serviceId: eureka-client-coupon-template
       strip-prefix: false
+    #优惠券分发微服务路由配置定义
+    distribution:
+      path: /coupon-distribution/**
+      serviceId: eureka-client-coupon-distribution
+      strip-prefix: false
   host:
     connect-timeout-millis: 15000
     socket-timeout-millis: 60000
